--- a/style.css
+++ b/style.css
@@ -4060,6 +4060,56 @@ button.alt, input[type="submit"].alt {
 .information {
   color: #f5d300; }
 
+.space-1 {
+  width: 100%;
+  height: 1.25rem;
+  line-height: 1.25rem; }
+
+.space-2 {
+  width: 100%;
+  height: 2.5rem;
+  line-height: 2.5rem; }
+
+.space-3 {
+  width: 100%;
+  height: 3.75rem;
+  line-height: 3.75rem; }
+
+.space-4 {
+  width: 100%;
+  height: 5rem;
+  line-height: 5rem; }
+
+.space-5 {
+  width: 100%;
+  height: 6.25rem;
+  line-height: 6.25rem; }
+
+.space-6 {
+  width: 100%;
+  height: 7.5rem;
+  line-height: 7.5rem; }
+
+.space-7 {
+  width: 100%;
+  height: 8.75rem;
+  line-height: 8.75rem; }
+
+.space-8 {
+  width: 100%;
+  height: 10rem;
+  line-height: 10rem; }
+
+.space-9 {
+  width: 100%;
+  height: 11.25rem;
+  line-height: 11.25rem; }
+
+.space-10 {
+  width: 100%;
+  height: 12.5rem;
+  line-height: 12.5rem; }
+
 /*--------------------------------------- Module Import ---------------------------------------*/
 /* Block */
 .block {
